# internal/handler/privatekey/get.go
@@ -26,8 +26,8 @@ import (
 // @Failure 400 {object} response.ErrorResponse "Team access denied"
 // @Failure 401 {object} response.ErrorResponse "User not authenticated"
 // @Failure 500 {object} response.ErrorResponse "Internal server error"
-// @Router /team/{teamID}/private-keys [get]
-// @Security Bearer
+// @Router /teams/{teamID}/private-keys [get]
+// @Security BearerAuth
 func (h *PrivateKeyHandler) GetPrivateKeys(w http.ResponseWriter, r *http.Request) {
 	// Get the team ID from the URL
 	teamID := chi.URLParam(r, "teamID")
@@ -88,8 +88,8 @@ func (h *PrivateKeyHandler) GetPrivateKeys(w http.ResponseWriter, r *http.Reques
 // @Failure 401 {object} response.ErrorResponse "User not authenticated"
 // @Failure 404 {object} response.ErrorResponse "Private key not found"
 // @Failure 500 {object} response.ErrorResponse "Internal server error"
-// @Router /team/{teamID}/private-keys/{privateKeyID} [get]
-// @Security Bearer
+// @Router /teams/{teamID}/private-keys/{privateKeyID} [get]
+// @Security BearerAuth
 func (h *PrivateKeyHandler) GetPrivateKey(w http.ResponseWriter, r *http.Request) {
 	// Get the team ID and private key ID from the URL
 	teamID := chi.URLParam(r, "teamID")
